--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,30 +1,33 @@
 @import "bootstrap";
 
+
+$grayMediumLight: #eaeaea;
+
 /* universal */
 
 html {
-	overflow-y: scroll;
+  overflow-y: scroll;
 }
 
 body {
-	padding-top: 60px;
+  padding-top: 60px;
 }
 
 section {
-	overflow: auto;
+  overflow: auto;
 }
 
 textarea {
-	resize: vertical;
+  resize: vertical;
 }
 
 .center {
-	text-align: center;
+  text-align: center;
+  h1 {
+    margin-bottom: 10px;
+  }
 }
 
-.center h1 {
-	margin-bottom: 10px;
-}
 
 
 /* typography */
@@ -46,7 +49,7 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #999;
+  color: $grayLight;
 }
 
 p {
@@ -67,11 +70,10 @@ p {
   padding-top: 9px;
   font-weight: bold;
   line-height: 1;
-}
-
-#logo:hover {
-  color: #fff;
+  &:hover {
+  color: white;
   text-decoration: none;
+  }
 }
 
 /* footer */
@@ -79,28 +81,24 @@ p {
 footer {
   margin-top: 45px;
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
-  color: #999;
-}
+  border-top: 1px solid $grayMediumLight;
+  color: $grayLight;
+    a {
+      color: $gray;
+        &:hover {
+        color: $grayDarker;
+        }
+      }
+  small {
+      float: left;
+  }
 
-footer a {
-  color: #555;
-}
-
-footer a:hover {
-  color: #222;
-}
-
-footer small {
-  float: left;
-}
-
-footer ul {
-  float: right;
-  list-style: none;
-}
-
-footer ul li {
-  float: left;
-  margin-left: 10px;
+  ul {
+      float: right;
+      list-style: none;
+    li {
+      float: left;
+        margin-left: 10px;
+    } 
+  }
 }
