--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,17 +15,18 @@
   </div>
 <% else %>
   <div class="center hero-unit">
-    <h1>Welcome to the Sample App</h1>
-
-    <h2>
-      This is the home page for the
-      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.
+    <h1>Let's Make Some apps Together!!</h1>
+    <h2>This is the twitter like application that I was telling you about.
+      Understanding how to create users/logins/sessions/security systems 
+      ad storing information in databases is huge in web site dev.
+      I'm pumped to make some applications with you.
     </h2>
+
+
 
     <%= link_to "Sign up now!", signup_path,
                                 class: "btn btn-large btn-primary" %>
   </div>
 
-  <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+  <%= link_to image_tag("brent.png", alt: "Rails"), 'http://rubyonrails.org/' %>
 <% end %>
