Add user following

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,9 @@
         <%= render 'shared/user_info' %>
       </section>
       <section>
+        <%= render 'shared/stats' %>
+      </section>
+      <section>
         <%= render 'shared/micropost_form' %>
       </section>
     </aside>
@@ -15,7 +18,7 @@
   </div>
 <% else %>
   <div class="center hero-unit">
-    <h1>Let's Make Some apps Together!!</h1>
+    <h1>Let's Make Some apps Together!! Sample App</h1>
     <h2>This is the twitter like application that I was telling you about.
       Understanding how to create users/logins/sessions/security systems 
       ad storing information in databases is huge in web site dev.
